# cliai

./: .env.example  .gitignore  README.md  install.bat  install.sh  pyproject.toml  quickinstall.sh
cliai/: __init__.py  __main__.py  main.py
cliai/config/: __init__.py  environment.py  models.py
cliai/services/: __init__.py  anthropic_service.py  base.py  factory.py  google_service.py  openai_service.py
cliai/ui/: __init__.py  chat_interface.py  model_selector.py  style.py
